--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "to-do-list-reel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://takaitech.github.io/to-do-list-reel",
   "dependencies": {
     "react": "^16.8.6",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -29,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
